# rust-fluent-git

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.md  README.md  justfile  rustfmt.toml
.claude/skills/wrap-cli/: SKILL.md
.github/workflows/: ci.yml
crates/fluent-brew/: Cargo.toml
crates/fluent-brew/src/: lib.rs
crates/fluent-brew/src/error/: formula.rs  maintenance.rs  mod.rs  query.rs  services.rs  tap.rs
crates/fluent-brew/src/ops/: formula.rs  maintenance.rs  mod.rs  query.rs  services.rs  tap.rs
crates/fluent-brew/src/types/: brew.rs  formula.rs  mod.rs  services.rs
crates/fluent-claude/: Cargo.toml
crates/fluent-claude/src/: lib.rs
crates/fluent-claude/src/claude/ops/: auth.rs  mod.rs  prompt.rs  session.rs
crates/fluent-claude/src/error/: auth.rs  mod.rs  prompt.rs  session.rs
crates/fluent-claude/src/ops/: auth.rs  mod.rs  prompt.rs  session.rs
crates/fluent-claude/src/sync/claude/ops/: auth.rs  prompt.rs  session.rs
crates/fluent-claude/src/types/: auth.rs  claude_code.rs  mod.rs  prompt.rs  session.rs
crates/fluent-core/: Cargo.toml  README.md
crates/fluent-core/src/: error.rs  lib.rs  run.rs  tool.rs
crates/fluent-gh/: Cargo.toml
crates/fluent-gh/src/: lib.rs
crates/fluent-gh/src/error/: api.rs  auth.rs  issue.rs  label.rs  mod.rs  pr.rs  release.rs  repo.rs  run.rs  secret.rs  variable.rs  workflow.rs
crates/fluent-gh/src/ops/: api.rs  auth.rs  issue.rs  label.rs  mod.rs  pr.rs  release.rs  repo.rs  run.rs  secret.rs  variable.rs  workflow.rs
crates/fluent-gh/src/types/: auth.rs  common.rs  github.rs  issue.rs  label.rs  mod.rs  pr.rs  release.rs  repo.rs  run.rs  secret.rs  variable.rs  workflow.rs
crates/fluent-git/: Cargo.toml  README.md
crates/fluent-git/src/: cmd.rs  info.rs  lib.rs
crates/fluent-git/src/error/: add.rs  branch.rs  checkout.rs  cherry_pick.rs  clean.rs  clone.rs  commit.rs  config.rs  diff.rs  init.rs  log.rs  merge.rs  mod.rs  open.rs  rebase.rs  remote.rs  reset.rs  rev_parse.rs  setup.rs  stash.rs  status.rs  tag.rs  worktree.rs
crates/fluent-git/src/git/: clone.rs  init.rs  open.rs
crates/fluent-git/src/ops/: add.rs  branch.rs  checkout.rs  cherry_pick.rs  clean.rs  commit.rs  config.rs  diff.rs  log.rs  merge.rs  mod.rs  rebase.rs  remote.rs  reset.rs  rev_parse.rs  stash.rs  status.rs  tag.rs  worktree.rs
crates/fluent-git/src/parse/: clone.rs  init.rs  log.rs  merge.rs  mod.rs  open.rs  status.rs
crates/fluent-git/src/types/: branch.rs  clone.rs  commit.rs  config.rs  init.rs  merge.rs  remote.rs  repo.rs  reset.rs  setup.rs  tag.rs  worktree.rs
crates/fluent-git/tests/: api.rs  worktree.rs
crates/fluent-lima/: Cargo.toml
crates/fluent-lima/src/: lib.rs
crates/fluent-lima/src/error/: copy.rs  disk.rs  info.rs  instance.rs  mod.rs  shell.rs  snapshot.rs
crates/fluent-lima/src/ops/: copy.rs  disk.rs  info.rs  instance.rs  mod.rs  shell.rs  snapshot.rs
crates/fluent-lima/src/sync/: mod.rs
crates/fluent-lima/src/types/: disk.rs  info.rs  instance.rs  lima.rs  mod.rs  shell.rs  snapshot.rs
crates/fluent-sdlc/: Cargo.toml  README.md
crates/fluent-sdlc/src/: lib.rs
crates/fluent-wrangler/: Cargo.toml
crates/fluent-wrangler/src/: lib.rs
docs/prds/: fluent-brew.md  fluent-claude.md  fluent-lima.md  fluent-wrangler.md  fluent-wrangler.research.md
scripts/: wrap_cli.sh  wrap_cli_batch.sh
scripts/wrap_cli/: 01_research.md  02_prd.md  03_scaffold.md  04_implement.md  05_assemble.md  role.md
src/: cmd.rs  info.rs  lib.rs  run.rs
src/builder/: version.rs
src/builder/repo/: worktree.rs
src/error/: add.rs  branch.rs  checkout.rs  cherry_pick.rs  clean.rs  clone.rs  commit.rs  config.rs  diff.rs  init.rs  log.rs  merge.rs  mod.rs  open.rs  rebase.rs  remote.rs  reset.rs  rev_parse.rs  setup.rs  stash.rs  status.rs  tag.rs  worktree.rs
src/git/: clone.rs  init.rs  mod.rs  open.rs
src/git/ops/: add.rs  branch.rs  checkout.rs  cherry_pick.rs  clean.rs  commit.rs  config.rs  diff.rs  log.rs  merge.rs  rebase.rs  remote.rs  reset.rs  rev_parse.rs  stash.rs  status.rs  tag.rs  worktree.rs
src/ops/: add.rs  branch.rs  checkout.rs  cherry_pick.rs  clean.rs  commit.rs  config.rs  diff.rs  log.rs  merge.rs  mod.rs  rebase.rs  remote.rs  reset.rs  rev_parse.rs  stash.rs  status.rs  tag.rs  worktree.rs
src/parse/: branch.rs  clone.rs  commit.rs  diff.rs  init.rs  mod.rs  open.rs  remote.rs  stash.rs  tag.rs  worktree.rs
src/sync/git/: clone.rs  init.rs  mod.rs  open.rs  repo.rs
src/types/: add.rs  checkout.rs  clean.rs  diff.rs  log.rs  mod.rs  repo.rs  rev_parse.rs  stash.rs  status.rs
tests/: api.rs  api_experimentation.rs  info.rs  init.rs  worktree.rs
(+136 files in other folders)
