[package]
name = "fluent_git"
version = "0.1.0"
edition = "2024"
authors = ["sksizer"]
description = "A fluent builder-pattern API for git operations"
homepage = "https://github.com/sksizer/rust-fluent-git"
license = "MIT"

[features]
default = ["blocking"]
blocking = []
tokio = ["dep:tokio", "cmd-spec/tokio"]

[dependencies]
cmd-spec = "0.1.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["process"], optional = true }
which = "8.0.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
