[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["sksizer"]

[workspace.dependencies]
cmd-spec = "0.1.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["process"] }
which = "8.0.2"
fluent-core = { path = "crates/fluent-core" }
fluent-git = { path = "crates/fluent-git" }
fluent-sdlc = { path = "crates/fluent-sdlc" }
