[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["sksizer"]

[workspace.dependencies]
cmd-spec = "0.1.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["process"] }
which = "8.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fluent-claude = { path = "crates/fluent-claude" }
fluent-core = { path = "crates/fluent-core" }
fluent-gh = { path = "crates/fluent-gh" }
fluent-git = { path = "crates/fluent-git" }
fluent-lima = { path = "crates/fluent-lima" }
fluent-brew = { path = "crates/fluent-brew" }
fluent-sdlc = { path = "crates/fluent-sdlc" }
