[package]
name = "fluent-sdlc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Fluent builder-pattern wrappers for SDLC command-line tools"

[features]
default = ["git", "gh", "claude"]
git = ["dep:fluent-git"]
gh = ["dep:fluent-gh"]
claude = ["dep:fluent-claude"]

[dependencies]
fluent-claude = { workspace = true, optional = true }
fluent-core = { workspace = true }
fluent-gh = { workspace = true, optional = true }
fluent-git = { workspace = true, optional = true }
